# PWS

./: Cargo.toml
.github/workflows/: main.yml
assets/: game.ldtk
src/: finish.rs  font_handing.rs  main.rs  player.rs  player_old.rs
src/character/: mod.rs
src/collision/: collision_event_plugin.rs  collision_groups.rs  mod.rs
src/custom_character_controller/: bundle.rs  character_promise.rs  input.rs  mod.rs  player_character_controls.rs
src/custom_character_controller/physics/: acceleration.rs  distance.rs  mod.rs  scalar.rs  velocity.rs
src/debug/: debug_camera.rs  debug_movement.rs  debug_sets.rs  debug_toggle.rs  mod.rs
src/enemies/: entity_bundles.rs  mod.rs  test_enemy.rs
src/game_flow/: game_state.rs
src/input/: input_sets.rs  mod.rs
src/physics/: mod.rs
src/player/: bundle.rs  collision.rs  mod.rs  promise_procedure.rs  state.rs
src/player/physics/: acceleration.rs  distance.rs  gravity.rs  jump.rs  mod.rs  option_add_assign.rs  scalar.rs  scheldules.rs  velocity.rs  walk.rs
src/unsorted/: id.rs  ldtk_level_handler.rs  ldtk_tag_handler.rs  mod.rs  promise.rs  uid.rs
