[package]
name = "PWS"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"

# ldtk tile editor for rust and bevy
bevy_ecs_ldtk = "0.10"
ldtk_rust = "0.6"

# physics engine
bevy_rapier2d = { version = "0.27", features = []}

# for inspecting the ecs world
bevy-inspector-egui = "0.26.0"

leafwing-input-manager = "0.15.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["debug"] # default features(debug shouldn't be in the final build)
debug = []

# [profile.dev.package."*"]
# opt-level = 3